--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="produtos">
               <div class="item-produto">
                 <h3>Cigarrete</h3>
-                <img src="cigarrete/cigarrete.png" alt="cigarrete">
+                <img src="cigarrete-temp/cigarrete.png" alt="cigarrete.pn">
             </div>
           
 
