Corrigindo erro nas imgs 2

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class="item-produto">
               <h3>Croinssant</h3>
-              <img src="./croinssant/croinssant.png" alt="Salgado Croinssant">
+              <img src="/croinssant/croinssant.png" alt="Salgado Croinssant">
             </div>
 
 
@@ -123,7 +123,7 @@
 
             <div class="item-produto">
               <h3>Assadinhos</h3>
-              <img src="./assadinhos/assadinhos2.jpg" alt="Assadinhos">
+              <img src="/assadinhos/assadinhos2.jpg" alt="Assadinhos">
             </div>
 
 
@@ -141,7 +141,7 @@
 
             <div class="item-produto">
               <h3>Joelinho Assado</h3>
-              <img src="./joelinho/joelinho.jpg" alt="joelinho">
+              <img src="/joelinho/joelinho.jpg" alt="joelinho">
           </div>
         </div>
       </section>
@@ -233,7 +233,7 @@
 
          <div class="Refri-item">
           <h3>Guaravita</h3>
-          <img src="./guaravita/guaravita.png" alt="Guaravita">
+          <img src="/guaravita/guaravita.png" alt="Guaravita">
          </div>
 
         </section>
